# b2pix-stacks

./: .gitignore  LICENSE  README.md
b2pix-server/: .env.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
b2pix-server/src/: app.rs  config.rs  lib.rs  main.rs
b2pix-server/src/api/: events.rs  mod.rs
b2pix-server/src/api/v1/: mod.rs
b2pix-server/src/common/: errors.rs  mod.rs  periodic_task.rs  signature.rs  task_registry.rs  token_email.rs  types.rs  utils.rs
b2pix-server/src/events/: domain_event.rs  handlers.rs  mod.rs  models.rs  processor.rs  publisher.rs  publisher_ext.rs  store.rs  typed_handler.rs
b2pix-server/src/features/: mod.rs
b2pix-server/src/features/invites/: mod.rs
b2pix-server/src/features/payment_requests/: mod.rs
b2pix-server/src/features/shared/: events.rs  mod.rs  value_objects.rs
b2pix-server/src/infrastructure/: mod.rs
b2pix-server/src/infrastructure/database/: mod.rs  mongo.rs
b2pix-server/src/infrastructure/storage/: gcs_manager.rs  mod.rs
b2pix-server/src/services/: b2pix_transfer_service.rs  bolt_transaction_b2pix.rs  efi_pay_service.rs  mod.rs
b2pix-server/src/services/banking/: efi_pay.rs  mod.rs
b2pix-server/src/services/bitcoin_price/: mod.rs  quote_service.rs
b2pix-server/src/services/email/: email_service.rs  invite_approved_email_handler.rs  invite_request_email_handler.rs  invite_sent_email_handler.rs  mod.rs  (+2 more)
b2pix-server/templates/: invite_approved.html  invite_code.html  payment_buyer_success.html  payment_seller_success.html  request_invite_code.html  verify_email.html
b2pix-ui/: CLAUDE.md  (+8 more)
(+447 files in other folders)
