[package]
name = "b2pix-rust-server"
version = "0.1.0"
edition = "2021"
default-run = "b2pix-rust-server"

[lib]
name = "b2pix_rust_server"
path = "src/lib.rs"

[[bin]]
name = "b2pix-rust-server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tower-http = { version = "0.5", features = ["cors"] }
axum-test = "9.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"

# Error Handling
thiserror = "1"
anyhow = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
secp256k1 = "0.27"
ripemd = "0.1"
hex = "0.4"
sha2 = "0.10"
bs58 = "0.5"
c32 = { version = "0.6", features = ["alloc"] }
jsonwebtoken = "9.2"
base64 = "0.21"
aes-gcm = "0.10"
rand_core = "0.6"
openssl = "0.10"

# Cloud Storage
google-cloud-storage = "0.24.0"
bytes = "1.5"
urlencoding = "2.1.3"

# AWS SDK
aws-config = "1.8.6"
aws-sdk-sesv2 = "1.98.0"

[dev-dependencies]
mockall = "0.12"
